# RustP2PChat

./: .dockerignore  API.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  Dockerfile.dev  Documentation.md  FEATURES.md  Readme.md  WINDOWS-COMPLETE-SETUP.ps1  WINDOWS-SETUP-SIMPLE.ps1  WINDOWS11-QUICK-START.bat  b  build-macos.sh  build-windows-from-wsl.sh  build.sh  clean.sh  create-release.sh  create-windows-installer.ps1  demo-true-p2p.ps1  demo.sh  deploy-docker.sh  docker-compose.dev.yml  docker-compose.yml  launcher.py  macos-installer.md  quick_test.sh  r  run.sh  setup-clean-commits.sh  test-args.rs  test.sh  test_tmux.sh  test_tmux_chat.sh
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml
docker/: README.md
docs/: Api.md  ChangeLog.md  Features.md  WINDOWS11-GUIDE.md  WINDOWS_DRAGDROP.md
scripts/: build-win11.ps1  build-windows.bat  build-windows.ps1  demo-p2p-windows.bat  demo-p2p-windows.ps1  demo-simple.ps1  demo-true-p2p.ps1  docker-chat.sh  docker-tmux-chat.sh  windows-demo-auto.bat  windows-demo-auto.ps1
shell/: Readme.md  automated_test.sh  comprehensive_test.sh  demo_chat.sh  demo_colors.sh  quick_test.sh  test_chat.sh  test_encryption.sh  test_p2p.sh  test_tmux.sh
src/: README.md  colors.rs  commands.rs  config.rs  encryption.rs  encryption_full.rs  error.rs  file_transfer.rs  gui.rs  lib.rs  lib_complex.rs  lib_old.rs  main.rs  main_simple.rs  peer.rs  protocol.rs  reliability.rs
tests/: README.md  command_tests.rs  concurrent_tests.rs  config_tests.rs  encryption_tests.rs  error_handling_tests.rs  file_transfer_tests.rs  integration_tests.rs  peer_management_tests.rs  protocol_tests.rs  reliability_tests.rs  simple_integration_test.rs
