[package]
name = "rust-p2p-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
directories = "5.0"
toml = "0.8"
chrono = "0.4"
rcgen = "0.11"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
webpki = "0.22"
async-trait = "0.1"
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
x25519-dalek = "2.0"
base64 = "0.21"
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"
poll-promise = "0.3"
rfd = "0.14"

[dev-dependencies]
tempfile = "3.8"

# Windows-specific configuration
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "combaseapi", "objbase", "unknwnbase", "winerror", "ole2"] }

# Build settings for Windows executable
[profile.release]
opt-level = 3
lto = true
strip = true

# Windows build configuration
[[bin]]
name = "rust-p2p-chat"
path = "src/main.rs"

# Windows resources
[package.metadata.winres]
OriginalFilename = "rust-p2p-chat.exe"
FileDescription = "Rust P2P Chat - Drag & Drop File Sharing"
CompanyName = "RustChat"
ProductName = "Rust P2P Chat"
LegalCopyright = "MIT License"
